--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Will you be my Forever even from Miles away
-                    MALIN Pookie?</h1>
+        <h1>Will you be my Forever even from Miles away <br>  MALIN Pookie?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
